--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Config\\": "config/"
         },
         "files": [
             "app/Base/function.php"
