add google captcha for security in attendee registration form

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DB_HOST=
 DB_NAME= 
 DB_USER= 
 DB_PASS= 
+
+
+CAPTCHA_VISIBLE='true'
+CAPTCHA_SITEKEY=6Le6dAonAAAAAPZ2xjSKLAJyA4ST8nWLYE-YDZ3O
+CAPTCHA_SECRET=6Le6dAonAAAAALJtKx1jiPaE0SdHmQXLk_PIEtoJ
